--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@ body, .main-bg {
   .profile-company {
     font-size: 1rem;
   }
+  .avatar {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 @keyframes fadeInUp {
@@ -64,8 +68,8 @@ body, .main-bg {
   width: 100%;
 }
 .avatar {
-  width: 110px;
-  height: 110px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   object-fit: cover;
   border: 3px solid #2e4d3a;
